...
          label="Отправил откликов"
        />
        <StatTile
          Icon={Trophy}
          iconColor={warningColor}
          value={data.picked_total}
          label="Меня выбрали"
        />
        <StatTile
          Icon={CheckCircle}
          iconColor={successColor}
          value={data.completed_total}
          label="Завершил сделок"
...
